--- a/index.html
+++ b/index.html
@@ -4,37 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PROJETO DE SITE</title>
     <link rel="stylesheet" href="tela.css">
 </head>
 <body>
     <div id="tela">
         <div id="esquerda">
-            <h1><strong>Cadastre-se</strong><br>Crie sua conta já</h1>
-            <img src="negocios2.svg" id="imagem" alt="Negócios animação 2">
+            <h1>Começe seus negócios agora!</h1>
+            <img src="negocios.svg" id="imagem" alt="Negócios animação">
         </div>
         <div id="direita">
             <div id="login">
-                <h1><strong>CADASTRO</strong></h1>
+                <h1><strong>LOGIN</strong></h1>
                 <div class="insere">
-                    <label for="nome">Usuário</label>
-                    <input type="text" id="nome" placeholder="Insira seu nome completo">
-                </div>
-                <div class="insere">
-                    <label for="email"></label>
-                    <input type="text" id="email" placeholder="Insira seu e-mail">
+                    <label for="email">Usuário</label>
+                    <input type="text" placeholder="Insira seu e-mail">
                 </div>
                 <div class="insere">
                     <label for="senha">Senha</label>
-                    <input type="password" id="senha" placeholder="Insira sua senha">
-                </div>
-                <div class="insere">
-                    <input type="password" id="nsenha" placeholder="Insira a senha novamente">
+                    <input type="password" placeholder="Insira sua senha">
                 </div>
                 <button id="clica">Login</button>
-                <p>Já tem uma conta?<a href="https://www.youtube.com/watch?v=R8LWDEpgOo0"> Entrar</a></p>
+                <p>Ainda não tem uma conta?<a href="cadastro.html"> Criar uma conta</a></p>
             </div>
         </div>
     </div>
+    
+    <script src="codigo.js"></script>
 </body>
 </html>
