--- a/cadastro.html
+++ b/cadastro.html
@@ -11,10 +11,10 @@
     <div id="tela">
         <div id="esquerda">
             <h1><strong>Cadastre-se</strong><br>Crie sua conta já</h1>
-            <img src="negocios2.svg" id="imagem" alt="Negócios animação 2">
+            <img src="negocios2.svg" class="imagem" alt="Negócios animação 2">
         </div>
         <div id="direita">
-            <div id="cadastro">
+            <div id="login">
                 <h1><strong>CADASTRO</strong></h1>
                 <div class="insere">
                     <label for="nome">Usuário</label>
@@ -32,7 +32,7 @@
                     <input type="password" id="nsenha" placeholder="Insira a senha novamente">
                 </div>
                 <button id="clica">Login</button>
-                <p>Já tem uma conta?<a href="https://www.youtube.com/watch?v=R8LWDEpgOo0"> Entrar</a></p>
+                <p>Já tem uma conta?<a href="index.html"> Entrar</a></p>
             </div>
         </div>
     </div>
