--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="tela">
         <div id="esquerda">
             <h1>Começe seus negócios agora!</h1>
-            <img src="negocios.svg" id="imagem" alt="Negócios animação">
+            <img src="negocios.svg" class="imagem" alt="Negócios animação">
         </div>
         <div id="direita">
             <div id="login">
